# lab02mpi

./: CMakeLists.txt  main.cpp
